# gql-dynamic-query-builder

./: README.md  pyproject.toml
src/: gql_dynamic_query_builder.py
src/api/: gql_dynamic_query_builder.py
src/core/: helpers.py
src/core/grammar/: parse_actions.py  query.py  subquery.py  where_clause.py
src/gql_dynamic_query_builder/api/: builder.py
src/gql_dynamic_query_builder/api/dsl/: query.py
src/gql_dynamic_query_builder/api/dsl/building_blocks/: helpers.py  lazy_where_block.py  query_block.py
src/gql_dynamic_query_builder/core/: helpers.py
src/gql_dynamic_query_builder/core/grammar/: parse_actions.py  query.py  subquery.py  where_clause.py
tests/: conftest.py  test_gql_dynamic_query_builder.py
tests/api/builder/: test_limit.py  test_offset.py
tests/api/builder/where_clauses/: test_nested_fields_and_explicit_clauses.py  test_nested_or_and_clauses.py  test_or_where_clauses.py  test_simple_fields.py
tests/api/dsl/: test_dsl_behaves_as_builder.py  test_dsl_nested_or_and_clauses.py
tests/api/gql_dynamic_query_builder/: test_limit.py  test_offset.py  test_simple_fields_and_explicit_clauses.py
tests/api/gql_dynamic_query_builder/where_clauses/: test_explicit_clauses.py  test_nested_fields.py  test_simple_fields.py  test_simple_fields_and_explicit_clauses.py
tests/core/: test_helpers.py
tests/gql_dynamic_query_builder/: explicit_clauses.py  nested_fields.py  nested_fields_and_explicit_clauses.py  simple_fields.py  simple_fields_and_explicit_clauses.py
